# DataFlux

./: README.md  main.py  main2.py  main3.py  pyproject.toml
src/dataflux/: app.py  state.py  tags.py  telemetry_common
src/dataflux/callbacks/: menu.py  serial.py
src/dataflux/services/serial/: __init__.py
src/dataflux/ui/: colors.py  windows.py
src/dataflux/ui/routines/: __init__.py  menu.py  status.py  windows.py
